--- a/capnpc-csharp.tests/capnpc-csharp.tests.csproj
+++ b/capnpc-csharp.tests/capnpc-csharp.tests.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <None Include="Embedded Resources\test.cs" />
+    <None Include="*.capnp" />
   </ItemGroup>
 
   <ItemGroup>
